--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                     <h2 class="form__title">Sign Up</h2>
                     <label class="form__label">
                         Login:
-                        <input class="form__input" type="text" name="login" required>
+                        <input class="form__input" type="text" name="login" minlength="4" required>
                     </label>
                     <label class="form__label">
                         Password:
-                        <input class="form__input" type="password" name="password" required>
+                        <input class="form__input" type="password" name="password" minlength="5" required>
                     </label>
                     <label class="form__label">
                         Email:
